tests/fw_rules_tests/policies/test22-networkpolicy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: p1
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - skydive
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchExpressions:
            - key: test
              operator: In
              values:
                - A
                - B

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: p2
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - key: test
        operator: In
        values:
          - A
          - B
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchExpressions:
            - key: app
              operator: In
              values:
                - skydive

---


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
